--- a/project/package.json
+++ b/project/package.json
@@ -12,12 +12,14 @@
     "dependencies": {
         "cordova-browser": "^5.0.4",
         "cordova-plugin-camera": "^4.0.3",
+        "cordova-plugin-websql": "0.0.10",
         "cordova-plugin-whitelist": "^1.3.3"
     },
     "cordova": {
         "plugins": {
             "cordova-plugin-whitelist": {},
-            "cordova-plugin-camera": {}
+            "cordova-plugin-camera": {},
+            "cordova-plugin-websql": {}
         },
         "platforms": [
             "browser"
