--- a/project/package.json
+++ b/project/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "cordova-browser": "^5.0.4",
         "cordova-plugin-camera": "^4.0.3",
+        "cordova-plugin-filepath": "^1.4.2",
         "cordova-plugin-whitelist": "^1.3.3",
         "cordova-sqlite-evcore-extbuild-free": "^0.9.9-rc1"
     },
@@ -19,7 +20,8 @@
         "plugins": {
             "cordova-plugin-whitelist": {},
             "cordova-plugin-camera": {},
-            "cordova-sqlite-evcore-extbuild-free": {}
+            "cordova-sqlite-evcore-extbuild-free": {},
+            "cordova-plugin-filepath": {}
         },
         "platforms": [
             "browser"
